# rust-me-plenty

./: Cargo.toml  README.md
src/: main.rs  routes.rs
src/client/: index.html
