[package]
name = "rust-me-plenty"
version = "0.1.0"
authors = ["brunonascimento <bhenrique.contact@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
actix-web-static-files = "2.0"
actix-files = "0.2.2"